# DDS-Router

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PLATFORM_SUPPORT.md  README.md  VERSION  _CMakeLists.txt  _colcon.pkg  codecov.yml  databroker.repos  ddsrouter.repos  ddsrouter_dll.diff  readthedocs.yaml
.common/: CMakeLists.txt
.common/cmake/common/: gtest.cmake
.common/cmake/packaging/: eProsimaPackaging.cmake  versionReader.cmake
.common/src/cpp/: library_CMakeLists.txt
ddspipe_yaml/: README.md  package.xml  project_settings.cmake
ddspipe_yaml/include/ddspipe_yaml/: Yaml.hpp  YamlManager.hpp  YamlReader.hpp  yaml_configuration_tags.hpp
ddspipe_yaml/src/cpp/: YamlManager.cpp  YamlReader_generic.cpp  YamlReader_participants.cpp  YamlReader_types.cpp
ddspipe_yaml/test/TestUtils/: test_utils.cpp  test_utils.hpp
ddspipe_yaml/test/unittest/: CMakeLists.txt  YamlConfigurationTestUtils.hpp
ddsrouter_cmake/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
ddsrouter_cmake/cmake/compilation/: compile_documentation.cmake  compile_library.cmake  compile_test.cmake  compile_tool.cmake
ddsrouter_cmake/cmake/configuration/: configure_project.cmake  configure_project_cpp.cmake
ddsrouter_cmake/cmake/cpp_common/: check_cpp.cmake  cmake_build_type.cmake  code_coverage.cmake  configure_project_cpp.cmake  cpp_flags.cmake  find_external.cmake
ddsrouter_cmake/cmake/eprosima/: eprosima_log.cmake
ddsrouter_cmake/cmake/packaging/: eProsima_packaging.cmake  install_resources.cmake
ddsrouter_cmake/cmake/project/: cmake_options.cmake  configure_project.cmake  in_source_build_prevention.cmake  installation_paths.cmake  load_project_settings.cmake  read_branch_commit_hash.cmake  read_commit_hash.cmake  read_version.cmake
ddsrouter_cmake/cmake/test/: compile_test.cmake  gtest.cmake  test_requirements.cmake  test_target.cmake  test_utils.cmake
ddsrouter_cmake/loader/: cmakeonly-Config.cmake.in  load_all.cmake
ddsrouter_cmake/modules/: FindSphinx.cmake
ddsrouter_cmake/test_installer/: gtest_aux.hpp
ddsrouter_core/src/cpp/: CMakeLists.txt
ddsrouter_yaml/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
ddsrouter_yaml/include/ddsrouter_yaml/: CommandlineArgsRouter.hpp  Yaml.hpp  YamlManager.hpp  YamlReader.hpp  YamlReaderConfiguration.hpp  yaml_configuration_tags.hpp
ddsrouter_yaml/src/cpp/: CommandlineArgsRouter.cpp  YamlManager.cpp  YamlReader.cpp  YamlReaderConfiguration.cpp  YamlReader_configuration.cpp  yaml_configuration_tags.cpp
ddsrouter_yaml/test/: CMakeLists.txt
ddsrouter_yaml/test/TestUtils/: TestLogHandler.hpp  test_utils.cpp  test_utils.hpp
ddsrouter_yaml/test/unittest/: CMakeLists.txt  YamlConfigurationTestUtils.hpp
docs/: CMakeLists.txt  README.md  conf.py  index.rst  package.xml  project_settings.cmake  requirements.txt
docs/cmake/modules/: FindSphinx.cmake
docs/resources/examples/: change_domain.yaml  change_domain_allowlist.yaml  echo.yaml  forwarding_routes.yaml  repeater_client.yaml  repeater_server.yaml  ros_discovery_client.yaml  ros_discovery_server.yaml  wan_client.yaml  wan_ds_client.yaml  wan_ds_server.yaml  wan_server.yaml  xml.yaml
docs/resources/getting_started/: client-ddsrouter.yaml  server-ddsrouter.yaml
docs/rst/: spelling_wordlist.txt
docs/rst/appendixes/: glossary.rst
docs/rst/examples/: change_domain_example.rst  echo_example.rst  forwarding_routes.rst  repeater_example.rst  ros_discovery_server_example.rst  wan_example.rst  xml_configuration.rst
docs/rst/exports/: alias.include
docs/rst/formalia/: format.txt  titlepage.rst
docs/rst/getting_started/: getting_started.rst  project_overview.rst  tutorial.rst  usage_example.rst
docs/rst/installation/: docker.rst  linux.rst  vulcanexus.rst  windows.rst
docs/rst/notes/: forthcoming_version.rst  new_version.rst  notes.rst
docs/rst/resources/: diagrams.drawio
docs/rst/use_cases/: repeater.rst  ros_cloud.rst  vulcanexus_cloud.rst  wan_tcp.rst
docs/rst/user_manual/: configuration.rst  getting_started.rst  glossary.rst  user_interface.rst  user_manual_glossary.rst  wan_configuration.rst  yaml_validator.rst
docs/test/: CMakeLists.txt
src/cpp/: Address.cpp  CMakeLists.txt  DataBroker.cpp  DataBrokerConfiguration.cpp  DataBrokerListener.cpp  DataBrokerLocalParticipant.cpp  DataBrokerParticipant.cpp  DataBrokerROSParticipant.cpp  DataBrokerWANParticipant.cpp  main.cpp  utils.cpp
src/cpp/communication/: Bridge.cpp  CopyPayloadPool.cpp  PayloadPool.cpp  Track.cpp
src/cpp/configuration/: BaseConfiguration.cpp  Configuration.cpp  DDSRouterConfiguration.cpp  DDSRouterReloadConfiguration.cpp  DatabrokerConfiguration.cpp  DiscoveryServerParticipantConfiguration.cpp  DiscoveryServerRTPSParticipantConfiguration.cpp  ParticipantConfiguration.cpp  SimpleParticipantConfiguration.cpp  SimpleRTPSParticipantConfiguration.cpp  WANParticipantConfiguration.cpp  configuration_implementations.cpp  configuration_utils.cpp
src/cpp/core/: DDSRouter.cpp  Databroker.cpp
src/cpp/dynamic/: AllowedTopicList.cpp  DiscoveryDatabase.cpp
src/cpp/event/: FileWatcherHandler.cpp  LogEventHandler.cpp  LogSevereEventHandler.cpp  MultipleEventHandler.cpp  PeriodicEventHandler.cpp
src/cpp/exception/: Exception.cpp
src/cpp/exceptions/: DDSRouterException.cpp  DatabrokerException.cpp  Exception.cpp
src/cpp/participant/: DDSRouterParticipantFactory.cpp  DatabrokerParticipantFactory.cpp  ParticipantDatabase.cpp  ParticipantFactory.cpp  ParticipantsDatabase.cpp
src/cpp/types/: Address.cpp  Data.cpp  ParticipantId.cpp  ParticipantType.cpp  RawConfiguration.cpp  ReturnCode.cpp  configuration_tags.cpp  utils.cpp
src/cpp/user_interface/: FileWatcherHandler.cpp  PeriodicEventHandler.cpp  SignalHandler.cpp  UserInterfaceManager.cpp  arguments_configuration.cpp
src/cpp/yaml/: YamlConfiguration.cpp  YamlManager.cpp  (+4 more)
src/cpp/yaml-configuration/: YamlManager.cpp  yaml_configuration_tags.cpp
test/blackbox/: CMakeLists.txt
test/unittest/: CMakeLists.txt
tools/ddsrouter_tool/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
(+2369 files in other folders)
